# watchdog-cpp

./: CMakeLists.txt  README.md
config/: config.json
include/: ConfigurationLoader.h  Factory.h  LinuxAPI.h  Logger.h  NativeAPIInterface.h  WatchdogWorkflow.h  WindowsAPI.h
src/: ConfigurationLoader.cpp  LinuxAPI.cpp  Logger.cpp  WatchdogWorkflow.cpp  WindowsAPI.cpp  main.cpp
tests/: test_NativeAPI.cpp
